--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "async-each": "^0.1.6",
-    "body-parser": "^1.12.0",
+    "body-parser": "^1.12.1",
     "bower": "^1.3.12",
     "browserify": "^9.0.3",
     "commander": "^2.7.0",
@@ -39,10 +39,10 @@
     "gulp-messageformat": "0.0.5",
     "gulp-nodemon": "^1.0.5",
     "gulp-plumber": "^1.0.0",
-    "gulp-react": "2.0.0",
+    "gulp-react": "^3.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-save": "^1.0.3",
-    "gulp-shell": "^0.3.0",
+    "gulp-shell": "^0.4.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-sweetjs": "^0.6.0",
     "gulp-traceur": "^0.17.0",
@@ -60,17 +60,17 @@
     "karma-jasmine": "^0.3.5",
     "karma-opera-launcher": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "method-override": "^2.3.1",
+    "method-override": "^2.3.2",
     "multer": "^0.1.8",
-    "react": "^0.12.2",
+    "react": "^0.13.0",
     "rsvp": "^3.0.17",
     "run-sequence": "^1.0.1",
     "serve-favicon": "^2.1.6",
     "stack-trace": "0.0.9",
-    "superagent": "^0.21.0",
+    "superagent": "^1.1.0",
     "sweet.js": "^0.7.4",
     "through2": "^0.6.3",
-    "traceur": "0.0.86",
+    "traceur": "0.0.87",
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {}
