#! update package.json dependency

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -21,29 +21,29 @@
     "es5-shim": "^4.1.0",
     "es6-shim": "^0.27.1",
     "event-stream": "^3.2.2",
-    "express": "^4.12.2",
+    "express": "^4.12.3",
     "fb-flo": "^0.4.0",
     "fibers": "^1.0.5",
     "gulp": "^3.8.11",
     "gulp-cached": "^1.0.4",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
-    "gulp-express": "^0.3.2",
     "gulp-filesize": "0.0.6",
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.4.0",
     "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.2",
+    "gulp-jshint": "^1.9.4",
     "gulp-karma": "0.0.4",
-    "gulp-less": "^3.0.1",
+    "gulp-less": "^3.0.2",
+    "gulp-live-server": "0.0.7",
     "gulp-messageformat": "0.0.5",
-    "gulp-nodemon": "^1.0.5",
+    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-save": "^1.0.3",
     "gulp-shell": "^0.4.0",
-    "gulp-sourcemaps": "^1.5.0",
+    "gulp-sourcemaps": "^1.5.1",
     "gulp-sweetjs": "^0.6.0",
     "gulp-traceur": "^0.17.0",
     "gulp-uglify": "^1.1.0",
@@ -53,7 +53,7 @@
     "highlight.js": "^8.4.0",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.1",
-    "jsxhint": "^0.12.1",
+    "jsxhint": "^0.13.2",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.4",
