--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -18,7 +18,6 @@
     "browserify": "^9.0.4",
     "commander": "^2.7.0",
     "cookie-parser": "^1.3.4",
-    "es5-shim": "^4.1.0",
     "es6-shim": "^0.27.1",
     "event-stream": "^3.2.2",
     "express": "^4.12.3",
@@ -37,6 +36,7 @@
     "gulp-less": "^3.0.2",
     "gulp-live-server": "0.0.8",
     "gulp-messageformat": "0.0.5",
+    "gulp-minify-css": "^1.0.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
@@ -71,7 +71,10 @@
     "sweet.js": "^0.7.4",
     "through2": "^0.6.3",
     "traceur": "0.0.87",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gulp-change": "^1.0.0"
+  }
 }
