#! update submodule and update package.json dependency

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "async-each": "^0.1.6",
-    "body-parser": "^1.12.2",
-    "bower": "^1.4.0",
-    "browserify": "^9.0.4",
-    "commander": "^2.7.0",
+    "body-parser": "^1.12.3",
+    "bower": "^1.4.1",
+    "browserify": "^9.0.8",
+    "commander": "^2.8.0",
     "cookie-parser": "^1.3.4",
     "es6-shim": "^0.27.1",
     "event-stream": "^3.2.2",
@@ -30,11 +30,11 @@
     "gulp-filesize": "0.0.6",
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.4.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.4",
+    "gulp-jscs": "^1.5.2",
+    "gulp-jshint": "^1.10.0",
     "gulp-karma": "0.0.4",
     "gulp-less": "^3.0.2",
-    "gulp-live-server": "0.0.8",
+    "gulp-live-server": "0.0.14",
     "gulp-messageformat": "0.0.5",
     "gulp-minify-css": "^1.0.0",
     "gulp-nodemon": "^2.0.2",
@@ -42,20 +42,20 @@
     "gulp-react": "^3.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-save": "^1.0.3",
-    "gulp-shell": "^0.4.0",
-    "gulp-sourcemaps": "^1.5.1",
+    "gulp-shell": "^0.4.1",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-sweetjs": "^0.6.0",
-    "gulp-traceur": "^0.17.0",
-    "gulp-uglify": "^1.1.0",
+    "gulp-traceur": "^0.17.1",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "gulp-yuidoc": "^0.1.2",
     "halson": "^2.3.1",
-    "highlight.js": "^8.4.0",
+    "highlight.js": "^8.5.0",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.1",
     "jsxhint": "^0.14.0",
     "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.5",
+    "karma-chrome-launcher": "^0.1.8",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
     "karma-opera-launcher": "^0.1.0",
@@ -67,13 +67,12 @@
     "run-sequence": "^1.0.1",
     "serve-favicon": "^2.1.6",
     "stack-trace": "0.0.9",
-    "superagent": "^1.1.0",
+    "superagent": "^1.2.0",
     "sweet.js": "^0.7.4",
-    "through2": "^0.6.3",
-    "traceur": "0.0.87",
-    "vinyl-source-stream": "^1.0.0"
+    "through2": "^0.6.5",
+    "vinyl-source-stream": "^1.0.0",
+    "gulp-change": "^1.0.0"
   },
   "dependencies": {
-    "gulp-change": "^1.0.0"
   }
 }
