--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -25,9 +25,9 @@
     "fibers": "^1.0.5",
     "gulp": "^3.8.11",
     "gulp-cached": "^1.0.4",
+    "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
-    "gulp-filesize": "0.0.6",
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.4.0",
     "gulp-jscs": "^1.5.2",
@@ -37,7 +37,6 @@
     "gulp-live-server": "0.0.14",
     "gulp-messageformat": "0.0.5",
     "gulp-minify-css": "^1.0.0",
-    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
     "gulp-remember": "^0.3.0",
@@ -70,9 +69,8 @@
     "superagent": "^1.2.0",
     "sweet.js": "^0.7.4",
     "through2": "^0.6.5",
-    "vinyl-source-stream": "^1.0.0",
-    "gulp-change": "^1.0.0"
+    "traceur": "0.0.88",
+    "vinyl-source-stream": "^1.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
