--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -18,6 +18,7 @@
     "browserify": "^9.0.8",
     "commander": "^2.8.0",
     "cookie-parser": "^1.3.4",
+    "custom-event-polyfill": "^0.1.2",
     "es6-shim": "^0.28.1",
     "event-stream": "^3.2.2",
     "express": "^4.12.3",
