--- a/packages/skeleton/.gitmodules
+++ b/packages/skeleton/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "imajs"]
 	path = imajs
-	url = git@gitlab.kancelar.seznam.cz:generic/IMA.js-core.git
+	url = git@gitlab.kancelar.seznam.cz:IMA.js/core.git
