--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -12,21 +12,20 @@
   "author": "Miroslav Jancarik",
   "license": "ISC",
   "devDependencies": {
-    "async": "^0.9.0",
-    "async-each": "^0.1.6",
     "body-parser": "^1.12.3",
     "bower": "^1.4.1",
-    "browserify": "^9.0.8",
+    "browserify": "^10.1.1",
     "commander": "^2.8.0",
+    "compression": "^1.4.3",
     "cookie-parser": "^1.3.4",
-    "custom-event-polyfill": "^0.1.2",
-    "es6-shim": "^0.28.1",
-    "event-stream": "^3.2.2",
+    "custom-event-polyfill": "^0.2.1",
+    "es6-shim": "^0.31.0",
+    "event-stream": "^3.3.1",
     "express": "^4.12.3",
     "fb-flo": "^0.4.0",
     "fibers": "^1.0.5",
     "gulp": "^3.8.11",
-    "gulp-cached": "^1.0.4",
+    "gulp-cached": "^1.1.0",
     "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
@@ -38,7 +37,7 @@
     "gulp-less": "^3.0.3",
     "gulp-live-server": "0.0.14",
     "gulp-messageformat": "0.0.5",
-    "gulp-minify-css": "^1.1.0",
+    "gulp-minify-css": "^1.1.1",
     "gulp-plumber": "^1.0.0",
     "gulp-react": "^3.0.1",
     "gulp-remember": "^0.3.0",
@@ -53,7 +52,7 @@
     "halson": "^2.3.1",
     "highlight.js": "^8.5.0",
     "jasmine-core": "^2.2.0",
-    "jshint-stylish": "^1.0.1",
+    "jshint-stylish": "^1.0.2",
     "jsxhint": "^0.14.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.8",
@@ -64,14 +63,13 @@
     "method-override": "^2.3.2",
     "multer": "^0.1.8",
     "react": "^0.13.2",
-    "rsvp": "^3.0.18",
     "run-sequence": "^1.0.1",
     "serve-favicon": "^2.1.6",
     "stack-trace": "0.0.9",
     "superagent": "^1.2.0",
     "sweet.js": "^0.7.4",
     "through2": "^0.6.5",
-    "traceur": "0.0.88",
+    "traceur": "0.0.89",
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {}
