--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -12,6 +12,7 @@
   "author": "Miroslav Jancarik",
   "license": "ISC",
   "devDependencies": {
+    "async-each": "^0.1.6",
     "body-parser": "^1.12.3",
     "bower": "^1.4.1",
     "browserify": "^10.1.1",
