#! update submodule, clear bower, package

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -2,7 +2,7 @@
   "name": "IMA.js",
   "version": "1.0.0",
   "description": "Isomorphic javascript application",
-  "main": "server/server.js",
+  "main": "build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,16 +13,17 @@
   "license": "ISC",
   "devDependencies": {
     "async-each": "^0.1.6",
-    "body-parser": "^1.12.3",
+    "body-parser": "^1.12.4",
     "bower": "^1.4.1",
-    "browserify": "^10.1.1",
-    "commander": "^2.8.0",
-    "compression": "^1.4.3",
+    "browserify": "^10.2.0",
+    "compression": "^1.4.4",
     "cookie-parser": "^1.3.4",
     "custom-event-polyfill": "^0.2.1",
-    "es6-shim": "^0.31.0",
+    "es6-shim": "^0.31.2",
+    "eslint": "^0.21.2",
+    "eslint-plugin-react": "^2.3.0",
     "event-stream": "^3.3.1",
-    "express": "^4.12.3",
+    "express": "^4.12.4",
     "fb-flo": "^0.4.0",
     "fibers": "^1.0.5",
     "gulp": "^3.8.11",
@@ -30,10 +31,9 @@
     "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
+    "gulp-eslint": "^0.12.0",
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.4.0",
-    "gulp-jscs": "^1.5.2",
-    "gulp-jshint": "^1.10.0",
     "gulp-karma": "0.0.4",
     "gulp-less": "^3.0.3",
     "gulp-live-server": "0.0.14",
@@ -52,23 +52,20 @@
     "gulp-yuidoc": "^0.1.2",
     "halson": "^2.3.1",
     "highlight.js": "^8.5.0",
-    "jasmine-core": "^2.2.0",
-    "jshint-stylish": "^1.0.2",
-    "jsxhint": "^0.14.0",
+    "jasmine-core": "^2.3.4",
     "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.8",
-    "karma-firefox-launcher": "^0.1.4",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
     "karma-opera-launcher": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "method-override": "^2.3.2",
+    "method-override": "^2.3.3",
     "multer": "^0.1.8",
-    "react": "^0.13.2",
+    "react": "^0.13.3",
     "run-sequence": "^1.0.1",
-    "serve-favicon": "^2.1.6",
+    "serve-favicon": "^2.2.1",
     "stack-trace": "0.0.9",
     "superagent": "^1.2.0",
-    "sweet.js": "^0.7.4",
     "through2": "^0.6.5",
     "traceur": "0.0.89",
     "vinyl-source-stream": "^1.0.0"
