--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "IMA.js",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Isomorphic javascript application",
   "main": "build/server.js",
   "scripts": {
@@ -9,7 +9,7 @@
   "keywords": [
     "IMA.js"
   ],
-  "author": "Miroslav Jancarik",
+  "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "license": "ISC",
   "devDependencies": {
     "async-each": "^0.1.6",
