--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -30,6 +30,7 @@
     "gulp-cached": "^1.1.0",
     "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.1",
+    "gulp-command": "^0.1.1",
     "gulp-concat": "^2.5.2",
     "gulp-eslint": "^0.12.0",
     "gulp-if": "^1.2.5",
