--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -46,7 +46,7 @@
     "gulp-cached": "^1.1.0",
     "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.1",
-    "gulp-command": "^0.1.1",
+    "gulp-command": "git://github.com/mjancarik/gulp-command.git#c8dd057e242b6c35cf1bca796e7561a8f22ccc11",
     "gulp-concat": "^2.5.2",
     "gulp-eslint": "^0.14.0",
     "gulp-if": "^1.2.5",
