--- a/packages/skeleton/.eslintrc
+++ b/packages/skeleton/.eslintrc
@@ -10,8 +10,8 @@
     "eqeqeq": [2, "allow-null"],
     "eol-last": 1,
     "guard-for-in": 0,
-    "indent": [2,"tab"],
-    "key-spacing": 0,
+    "indent": [2, "tab", {"SwitchCase": 1}],
+   "key-spacing": 0,
     "new-cap": [1, {"capIsNew": false, "newIsCap": true}],
     "new-parens": 0,
     "no-bitwise": 0,
@@ -22,7 +22,7 @@
     "no-debugger": 1,
     "no-dupe-keys": 1,
     "no-duplicate-case": 1,
-    "no-empty-class": 1,
+    "no-empty-character-class": 1,
     "no-eval": 1,
     "no-ex-assign": 1,
     "no-extend-native": 1,
@@ -63,7 +63,7 @@
     "no-unreachable": 1,
     "no-use-before-define": [0, "nofunc"],
     "no-warning-comments": [0, {"terms": ["todo", "fixme"]}],
-    "no-wrap-func": 1,
+    "no-extra-parens": 0,
     "quotes": [1, "single", "avoid-escape"],
     "quote-props": [0, "as-needed"],
     "radix": 1,
@@ -71,9 +71,11 @@
     "semi-spacing": [1, {"before": false, "after": true}],
     "space-after-keywords": [1, "always"],
     "space-before-blocks": [1, "always"],
-    "space-before-function-parentheses": [1, "never"],
+    "space-before-function-paren": [1, "never"],
     "space-infix-ops": 1,
-    "space-in-brackets": 1,
+    "object-curly-spacing": [2, "always"],
+    "computed-property-spacing": [2, "never"],
+    "array-bracket-spacing": [2, "never"],
     "space-in-parens": [1, "never"],
     "space-return-throw-case": 1,
     "space-unary-ops": [1, {"words": true, "nonwords": false}],
