--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,10 +1,11 @@
 {
   "name": "IMA.js",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Isomorphic javascript application",
   "main": "build/server.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "node node_modules/gulp/bin/gulp.js test",
+    "start": "node node_modules/gulp/bin/gulp.js dev"
   },
   "keywords": [
     "IMA.js",
@@ -91,5 +92,22 @@
     "traceur": "0.0.89",
     "vinyl-source-stream": "^1.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "custom-event-polyfill": "^0.2.1",
+    "es6-shim": "^0.33.0",
+    "express": "^4.13.3",
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
+    "compression": "^1.5.2",
+    "helmet": "^0.10.0",
+    "serve-favicon": "^2.3.0",
+    "method-override": "^2.3.5",
+    "multer": "^1.0.1",
+    "stack-trace": "0.0.9",
+    "highlight.js": "^8.7.0",
+    "async-each": "^0.1.6",
+    "superagent": "^1.2.0",
+    "react": "^0.13.3",
+    "traceur": "0.0.89"
+  }
 }
