--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,6 @@
 {
   "name": "IMA.js",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Isomorphic javascript application",
   "main": "build/server.js",
   "scripts": {
@@ -32,22 +32,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "async-each": "^0.1.6",
-    "body-parser": "^1.13.3",
+    "babelify": "^6.1.3",
     "bower": "^1.4.1",
     "browserify": "^11.0.1",
-    "compression": "^1.5.2",
-    "cookie-parser": "^1.3.5",
-    "custom-event-polyfill": "^0.2.1",
-    "es6-shim": "^0.33.0",
-    "eslint": "^1.0.0",
-    "eslint-plugin-react": "^3.2.0",
+    "eslint": "^1.2.0",
+    "eslint-plugin-react": "^3.2.3",
     "event-stream": "^3.3.1",
-    "express": "^4.13.3",
     "fb-flo": "^0.4.0",
     "fibers": "^1.0.6",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-babel": "^5.2.0",
     "gulp-cached": "^1.1.0",
     "gulp-change": "^1.0.0",
     "gulp-clean": "^0.3.1",
@@ -55,59 +50,45 @@
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
     "gulp-if": "^1.2.5",
-    "gulp-insert": "^0.4.0",
-    "gulp-karma": "0.0.4",
+    "gulp-insert": "^0.5.0",
     "gulp-less": "^3.0.3",
-    "gulp-live-server": "0.0.23",
+    "gulp-live-server": "0.0.24",
     "gulp-messageformat": "0.0.6",
     "gulp-minify-css": "^1.2.0",
     "gulp-plumber": "^1.0.0",
-    "gulp-react": "^3.0.1",
     "gulp-remember": "^0.3.0",
     "gulp-save": "^1.2.1",
-    "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-sweetjs": "^0.6.0",
-    "gulp-traceur": "^0.17.1",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "gulp-yuidoc": "^0.1.2",
-    "helmet": "^0.10.0",
-    "highlight.js": "^8.7.0",
     "jasmine-core": "^2.3.4",
-    "karma": "^0.12.4",
+    "karma": "^0.13.9",
     "karma-chrome-launcher": "^0.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
-    "karma-opera-launcher": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.2.0",
-    "method-override": "^2.3.5",
-    "multer": "^1.0.1",
-    "react": "^0.13.3",
+    "karma-opera-launcher": "^0.3.0",
+    "karma-phantomjs-launcher": "^0.2.1",
     "run-sequence": "^1.1.2",
-    "serve-favicon": "^2.3.0",
-    "stack-trace": "0.0.9",
-    "superagent": "^1.2.0",
-    "through2": "^2.0.0",
-    "traceur": "0.0.89",
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
+    "async-each": "^0.1.6",
+    "body-parser": "^1.13.3",
+    "clone": "^1.0.2",
+    "compression": "^1.5.2",
+    "cookie-parser": "^1.3.5",
     "custom-event-polyfill": "^0.2.1",
     "es6-shim": "^0.33.0",
     "express": "^4.13.3",
-    "body-parser": "^1.13.3",
-    "cookie-parser": "^1.3.5",
-    "compression": "^1.5.2",
     "helmet": "^0.10.0",
-    "serve-favicon": "^2.3.0",
-    "method-override": "^2.3.5",
-    "multer": "^1.0.1",
-    "stack-trace": "0.0.9",
     "highlight.js": "^8.7.0",
-    "async-each": "^0.1.6",
-    "superagent": "^1.2.0",
+    "method-override": "^2.3.5",
+    "multer": "^1.0.3",
     "react": "^0.13.3",
-    "traceur": "0.0.89"
+    "serve-favicon": "^2.3.0",
+    "stack-trace": "0.0.9",
+    "superagent": "^1.3.0"
   }
 }
