--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -35,6 +35,7 @@
     "babelify": "^6.2.0",
     "bower": "^1.5.1",
     "browserify": "^11.0.1",
+    "del": "^2.0.1",
     "eslint": "^1.2.1",
     "eslint-plugin-react": "^3.2.3",
     "event-stream": "^3.3.1",
@@ -44,7 +45,6 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cached": "^1.1.0",
     "gulp-change": "^1.0.0",
-    "gulp-clean": "^0.3.1",
     "gulp-command": "git://github.com/mjancarik/gulp-command.git#c8dd057e242b6c35cf1bca796e7561a8f22ccc11",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
