--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -61,6 +61,7 @@
     "gulp-sweetjs": "^0.6.0",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.5",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.9",
