updated the bower.json and package.json

--- a/packages/skeleton/bower.json
+++ b/packages/skeleton/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "IMA.js",
-  "version": "1.0.0",
+  "name": "IMA.js-skeleton",
+  "version": "0.9.0",
   "dependencies": {},
   "devDependencies": {
   }
