--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -32,6 +32,8 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "IMA.js-gulp-task-loader": "git+https://git@github.com/seznam/IMA.js-gulp-task-loader.git#0.9.0",
+    "IMA.js-gulp-tasks": "git+https://git@github.com/seznam/IMA.js-gulp-tasks.git#0.9.0",
     "babelify": "^6.3.0",
     "bower": "^1.5.2",
     "browserify": "^11.0.1",
