--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -33,64 +33,65 @@
   "license": "MIT",
   "devDependencies": {
     "babelify": "^6.3.0",
-    "bower": "^1.5.2",
-    "browserify": "^11.0.1",
+    "bower": "^1.6.3",
+    "browserify": "^11.2.0",
     "del": "^2.0.1",
-    "eslint": "^1.3.1",
-    "eslint-plugin-react": "^3.3.0",
-    "event-stream": "^3.3.1",
-    "fb-flo": "^0.4.0",
+    "eslint": "^1.7.1",
+    "eslint-plugin-react": "^3.6.2",
+    "event-stream": "^3.3.2",
+    "fb-flo": "^0.5.0",
     "fibers": "^1.0.6",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.0.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cached": "^1.1.0",
     "gulp-change": "^1.0.0",
     "gulp-command": "git://github.com/mjancarik/gulp-command.git#c8dd057e242b6c35cf1bca796e7561a8f22ccc11",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^1.0.0",
-    "gulp-if": "^1.2.5",
+    "gulp-if": "^2.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-less": "^3.0.3",
-    "gulp-live-server": "0.0.28",
-    "gulp-messageformat": "0.0.6",
+    "gulp-live-server": "0.0.29",
+    "gulp-messageformat": "0.0.10",
     "gulp-minify-css": "^1.2.1",
     "gulp-plumber": "^1.0.0",
     "gulp-remember": "^0.3.0",
     "gulp-save": "^1.2.1",
-    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-sweetjs": "^0.6.0",
-    "gulp-uglify": "^1.4.0",
+    "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.3.4",
-    "karma": "^0.13.9",
-    "karma-chrome-launcher": "^0.2.0",
+    "karma": "^0.13.11",
+    "karma-chrome-launcher": "^0.2.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
     "karma-opera-launcher": "^0.3.0",
     "karma-phantomjs-launcher": "^0.2.1",
-    "run-sequence": "^1.1.2",
+    "run-sequence": "^1.1.4",
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
     "async-each": "^0.1.6",
-    "body-parser": "^1.13.3",
+    "body-parser": "^1.14.1",
     "clone": "^1.0.2",
-    "compression": "^1.5.2",
-    "cookie-parser": "^1.3.5",
+    "compression": "^1.6.0",
+    "cookie-parser": "^1.4.0",
     "custom-event-polyfill": "^0.2.1",
-    "es6-shim": "^0.33.3",
+    "es6-shim": "^0.33.6",
     "express": "^4.13.3",
-    "gulp-babel": "^5.2.1",
-    "helmet": "^0.10.0",
+    "gulp-babel": "^5.3.0",
+    "helmet": "^0.12.0",
     "highlight.js": "^8.7.0",
     "method-override": "^2.3.5",
-    "multer": "^1.0.3",
-    "react": "^0.13.3",
+    "multer": "^1.0.6",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "serve-favicon": "^2.3.0",
     "stack-trace": "0.0.9",
     "superagent": "^1.3.0",
-    "winston": "^1.0.1"
+    "winston": "^1.1.1"
   }
 }
