--- a/packages/gulp-task-loader/package.json
+++ b/packages/gulp-task-loader/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "IMA.js-gulp-task-loader",
+  "name": "ima.js-gulp-task-loader",
   "version": "0.9.0",
   "description": "Automatic gulp task loader for IMA.js applications.",
   "main": "taskLoader.js",
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/seznam/IMA.js-gulp-task-loader.git"
+  },
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org/"
   },
   "keywords": [
     "gulp",
