#! add npm ima.js packages for gulp

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -32,12 +32,12 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "IMA.js-gulp-task-loader": "git+https://git@github.com/seznam/IMA.js-gulp-task-loader.git#0.9.0",
-    "IMA.js-gulp-tasks": "git+https://git@github.com/seznam/IMA.js-gulp-tasks.git#0.9.0",
+    "ima.js-gulp-task-loader": "0.10.0",
+    "ima.js-gulp-tasks": "0.10.0",
     "babelify": "^6.3.0",
     "bower": "^1.6.3",
     "browserify": "^11.2.0",
-    "del": "^2.0.1",
+    "del": "^2.0.2",
     "eslint": "^1.7.1",
     "eslint-plugin-react": "^3.6.2",
     "event-stream": "^3.3.2",
