--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima.js-gulp-tasks",
-	"version": "0.10.2",
+	"version": "0.10.3",
 	"description": "Default gulp tasks for IMA.js applications.",
 	"main": "",
 	"scripts": {
@@ -25,18 +25,29 @@
 	},
 	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
 	"devDependencies": {
-		"babelify": "^6.3.0",
-		"browserify": "^11.2.0",
+		"babel-core": "^6.2.1",
+		"babel-plugin-external-helpers-2": "^6.1.18",
+		"babel-plugin-transform-es2015-modules-systemjs": "^6.1.18",
+		"babel-plugin-transform-react-constant-elements": "^6.1.20",
+		"babel-plugin-transform-react-inline-elements": "^6.1.20",
+		"babel-preset-es2015": "^6.1.18",
+		"babel-preset-react": "^6.1.18",
+		"babelify": "^7.2.0",
+		"browserify": "^12.0.1",
 		"del": "^2.1.0",
+		"eslint": "^1.9.0",
+		"eslint-plugin-react": "^3.8.0",
 		"event-stream": "^3.3.2",
 		"fb-flo": "^0.5.0",
+		"fibers": "^1.0.6",
 		"gulp": "^3.9.0",
 		"gulp-autoprefixer": "^3.1.0",
-		"gulp-babel": "^5.3.0",
+		"gulp-babel": "^6.1.0",
 		"gulp-cached": "^1.1.0",
 		"gulp-change": "^1.0.0",
+		"gulp-command": "git://github.com/mjancarik/gulp-command.git#c8dd057e242b6c35cf1bca796e7561a8f22ccc11",
 		"gulp-concat": "^2.6.0",
-		"gulp-eslint": "^1.1.0",
+		"gulp-eslint": "^1.1.1",
 		"gulp-if": "^2.0.0",
 		"gulp-insert": "^0.5.0",
 		"gulp-less": "^3.0.5",
@@ -52,8 +63,16 @@
 		"gulp-util": "^3.0.7",
 		"gulp-watch": "^4.3.5",
 		"gulp-yuidoc": "^0.1.2",
+		"jasmine": "^2.3.2",
+		"jasmine-core": "^2.3.4",
 		"karma": "^0.13.15",
-		"run-sequence": "^1.1.4",
+		"karma-browserstack-launcher": "^0.1.7",
+		"karma-chrome-launcher": "^0.2.1",
+		"karma-firefox-launcher": "^0.1.7",
+		"karma-jasmine": "^0.3.6",
+		"karma-opera-launcher": "^0.3.0",
+		"karma-phantomjs-launcher": "^0.2.1",
+		"run-sequence": "^1.1.5",
 		"vinyl-source-stream": "^1.1.0"
 	}
 }
