--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,99 +1,59 @@
 {
-  "name": "IMA.js-skeleton",
-  "version": "0.9.0",
-  "description": "Isomorphic javascript application",
-  "main": "build/server.js",
-  "scripts": {
-    "test": "node node_modules/gulp/bin/gulp.js test",
-    "start": "node node_modules/gulp/bin/gulp.js dev"
-  },
-  "keywords": [
-    "IMA.js",
-    "Isomorphic",
-    "Javascript"
-  ],
-  "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "contributors": [
-    {
-      "name": "Martin Urban",
-      "email": "martin.urban@firma.seznam.cz"
-    },
-    {
-      "name": "Martin Jurča",
-      "email": "martin.jurca@firma.seznam.cz"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/seznam/IMA.js-skeleton.git"
-  },
-  "bugs": {
-    "url": "https://github.com/seznam/IMA.js-skeleton/issues"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "ima.js-gulp-task-loader": "0.10.0",
-    "ima.js-gulp-tasks": "0.10.2",
-    "babelify": "^6.3.0",
-    "bower": "^1.6.5",
-    "browserify": "^11.2.0",
-    "del": "^2.1.0",
-    "eslint": "^1.10.1",
-    "eslint-plugin-react": "^3.10.0",
-    "event-stream": "^3.3.2",
-    "fb-flo": "^0.5.0",
-    "fibers": "^1.0.6",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-cached": "^1.1.0",
-    "gulp-change": "^1.0.0",
-    "gulp-command": "git://github.com/mjancarik/gulp-command.git#c8dd057e242b6c35cf1bca796e7561a8f22ccc11",
-    "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^1.1.0",
-    "gulp-if": "^2.0.0",
-    "gulp-insert": "^0.5.0",
-    "gulp-less": "^3.0.5",
-    "gulp-live-server": "0.0.29",
-    "gulp-messageformat": "0.0.10",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-plumber": "^1.0.0",
-    "gulp-remember": "^0.3.0",
-    "gulp-save": "^1.2.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-sweetjs": "^0.6.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.6",
-    "gulp-watch": "^4.3.5",
-    "gulp-yuidoc": "^0.1.2",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.6",
-    "karma-opera-launcher": "^0.3.0",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "run-sequence": "^1.1.5",
-    "vinyl-source-stream": "^1.0.0"
-  },
-  "dependencies": {
-    "async-each": "^0.1.6",
-    "body-parser": "^1.14.1",
-    "clone": "^1.0.2",
-    "compression": "^1.6.0",
-    "cookie-parser": "^1.4.0",
-    "custom-event-polyfill": "^0.2.1",
-    "es6-shim": "^0.33.13",
-    "express": "^4.13.3",
-    "gulp-babel": "^5.3.0",
-    "helmet": "^0.14.0",
-    "highlight.js": "^8.7.0",
-    "method-override": "^2.3.5",
-    "multer": "^1.1.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "serve-favicon": "^2.3.0",
-    "stack-trace": "0.0.9",
-    "superagent": "^1.3.0",
-    "winston": "^1.1.1"
-  }
+	"name": "IMA.js-skeleton",
+	"version": "0.9.0",
+	"description": "Isomorphic javascript application",
+	"main": "build/server.js",
+	"scripts": {
+		"test": "node node_modules/gulp/bin/gulp.js test",
+		"start": "node node_modules/gulp/bin/gulp.js dev"
+	},
+	"keywords": [
+		"IMA.js",
+		"Isomorphic",
+		"Javascript"
+	],
+	"author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
+	"contributors": [
+		{
+			"name": "Martin Urban",
+			"email": "martin.urban@firma.seznam.cz"
+		},
+		{
+			"name": "Martin Jurča",
+			"email": "martin.jurca@firma.seznam.cz"
+		}
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/seznam/IMA.js-skeleton.git"
+	},
+	"bugs": {
+		"url": "https://github.com/seznam/IMA.js-skeleton/issues"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"bower": "^1.6.3",
+		"ima.js-gulp-task-loader": "0.10.0",
+		"ima.js-gulp-tasks": "0.10.5"
+	},
+	"dependencies": {
+		"async-each": "^0.1.6",
+		"body-parser": "^1.14.1",
+		"clone": "^1.0.2",
+		"compression": "^1.6.0",
+		"cookie-parser": "^1.4.0",
+		"custom-event-polyfill": "^0.2.1",
+		"es6-shim": "^0.33.10",
+		"express": "^4.13.3",
+		"helmet": "^0.14.0",
+		"highlight.js": "^8.7.0",
+		"method-override": "^2.3.5",
+		"multer": "^1.0.6",
+		"react": "^0.14.3",
+		"react-dom": "^0.14.3",
+		"serve-favicon": "^2.3.0",
+		"stack-trace": "0.0.9",
+		"superagent": "^1.3.0",
+		"winston": "^1.1.2"
+	}
 }
