--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -32,9 +32,16 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"babel-plugin-external-helpers-2": "^6.1.18",
+		"babel-plugin-transform-es2015-modules-systemjs": "^6.1.18",
+		"babel-plugin-transform-react-constant-elements": "^6.1.20",
+		"babel-plugin-transform-react-inline-elements": "^6.1.20",
+		"babel-preset-es2015": "^6.1.18",
+		"babel-preset-react": "^6.1.18",
 		"bower": "^1.6.3",
+		"gulp": "^3.9.0",
 		"ima.js-gulp-task-loader": "0.10.0",
-		"ima.js-gulp-tasks": "0.10.5"
+		"ima.js-gulp-tasks": "0.10.7"
 	},
 	"dependencies": {
 		"async-each": "^0.1.6",
