--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "IMA.js-skeleton",
-	"version": "0.9.0",
+	"version": "0.10.0",
 	"description": "Isomorphic javascript application",
 	"main": "build/server.js",
 	"scripts": {
@@ -8,21 +8,21 @@
 		"start": "node node_modules/gulp/bin/gulp.js dev"
 	},
 	"keywords": [
-		"IMA.js",
-		"Isomorphic",
-		"Javascript"
-	],
+    "IMA.js",
+    "Isomorphic",
+    "Javascript"
+  ],
 	"author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
 	"contributors": [
 		{
 			"name": "Martin Urban",
 			"email": "martin.urban@firma.seznam.cz"
-		},
+    },
 		{
 			"name": "Martin Jurča",
 			"email": "martin.jurca@firma.seznam.cz"
-		}
-	],
+    }
+  ],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/seznam/IMA.js-skeleton.git"
@@ -41,10 +41,11 @@
 		"bower": "^1.6.3",
 		"gulp": "^3.9.0",
 		"ima.js-gulp-task-loader": "0.10.0",
-		"ima.js-gulp-tasks": "0.10.7"
+		"ima.js-gulp-tasks": "0.10.9"
 	},
 	"dependencies": {
 		"async-each": "^0.1.6",
+		"babel-polyfill": "^6.2.0",
 		"body-parser": "^1.14.1",
 		"clone": "^1.0.2",
 		"compression": "^1.6.0",
@@ -52,15 +53,16 @@
 		"custom-event-polyfill": "^0.2.1",
 		"es6-shim": "^0.33.10",
 		"express": "^4.13.3",
-		"helmet": "^0.14.0",
-		"highlight.js": "^8.7.0",
+		"helmet": "^0.15.0",
+		"highlight.js": "^9.0.0",
+		"ima.js-babel6-polyfill": "^0.1.0",
 		"method-override": "^2.3.5",
 		"multer": "^1.0.6",
 		"react": "^0.14.3",
 		"react-dom": "^0.14.3",
 		"serve-favicon": "^2.3.0",
 		"stack-trace": "0.0.9",
-		"superagent": "^1.3.0",
-		"winston": "^1.1.2"
+		"superagent": "^1.5.0",
+		"winston": "^2.1.1"
 	}
 }
