--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima.js-gulp-tasks",
-	"version": "0.10.11",
+	"version": "0.10.12",
 	"description": "Default gulp tasks for IMA.js applications.",
 	"main": "",
 	"scripts": {
@@ -27,6 +27,7 @@
 	"devDependencies": {},
 	"dependencies": {
 		"babel-core": "^6.2.1",
+		"babel-preset-es2015-loose": "^6.1.3",
 		"babelify": "^7.2.0",
 		"browserify": "^12.0.1",
 		"del": "^2.1.0",
