--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -42,7 +42,7 @@
 		"bower": "^1.6.3",
 		"gulp": "^3.9.0",
 		"ima.js-gulp-task-loader": "0.10.0",
-		"ima.js-gulp-tasks": "0.11.0"
+		"ima.js-gulp-tasks": "git+http://github.com/seznam/IMA.js-gulp-tasks.git#0.11.1"
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.2.0",
