--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -26,16 +26,23 @@
 	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
 	"devDependencies": {},
 	"dependencies": {
-		"babel-core": "^6.2.1",
+		"babel-core": "^6.3.17",
+		"babel-plugin-external-helpers-2": "^6.3.13",
+		"babel-plugin-transform-es2015-modules-systemjs": "^6.3.13",
+		"babel-plugin-transform-react-constant-elements": "^6.3.13",
+		"babel-plugin-transform-react-inline-elements": "^6.3.13",
+		"babel-preset-es2015": "^6.3.13",
 		"babel-preset-es2015-loose": "^6.1.3",
+		"babel-preset-react": "^6.3.13",
 		"babelify": "^7.2.0",
 		"browserify": "^12.0.1",
 		"del": "^2.1.0",
-		"eslint": "^1.10.2",
-		"eslint-plugin-react": "^3.8.0",
+		"eslint": "^1.10.3",
+		"eslint-plugin-react": "^3.11.3",
 		"event-stream": "^3.3.2",
 		"fb-flo": "^0.5.0",
-		"fibers": "^1.0.6",
+		"fibers": "^1.0.8",
+		"gulp": "^3.9.0",
 		"gulp-autoprefixer": "^3.1.0",
 		"gulp-babel": "^6.1.1",
 		"gulp-cached": "^1.1.0",
@@ -57,8 +64,8 @@
 		"gulp-util": "^3.0.7",
 		"gulp-watch": "^4.3.5",
 		"gulp-yuidoc": "^0.1.2",
-		"jasmine": "^2.3.2",
-		"jasmine-core": "^2.3.4",
+		"jasmine": "^2.4.1",
+		"jasmine-core": "^2.4.1",
 		"karma": "^0.13.15",
 		"karma-jasmine": "^0.3.6",
 		"karma-phantomjs-launcher": "^0.2.1",
