--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -11,10 +11,10 @@
 		"url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
 	},
 	"keywords": [
-		"gulp",
-		"IMA.js",
-		"ima"
-	],
+    "gulp",
+    "IMA.js",
+    "ima"
+  ],
 	"author": "Seznam.cz, a.s.",
 	"license": "MIT",
 	"bugs": {
@@ -48,13 +48,13 @@
 		"gulp-cached": "^1.1.0",
 		"gulp-change": "^1.0.0",
 		"gulp-concat": "^2.6.0",
+		"gulp-cssnano": "^2.0.0",
 		"gulp-eslint": "^1.1.1",
 		"gulp-if": "^2.0.0",
 		"gulp-insert": "^0.5.0",
 		"gulp-less": "^3.0.5",
 		"gulp-live-server": "0.0.29",
 		"gulp-messageformat": "0.0.10",
-		"gulp-minify-css": "^1.2.3",
 		"gulp-plumber": "^1.0.1",
 		"gulp-remember": "^0.3.0",
 		"gulp-save": "^1.2.1",
