#! fix parsing set-cookie header for HttpOnly, Secure and Max-Age options

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,20 +1,22 @@
 {
 	"name": "ima.js-server",
-	"version": "0.11.6",
+	"version": "0.11.7",
 	"description": "Default dev server for IMA.js applications.",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"prepublish": "npm run test",
+		"test": "node node_modules/gulp/bin/gulp.js test --harmony_destructuring",
+		"dev": "node node_modules/gulp/bin/gulp.js dev --harmony_destructuring"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/seznam/IMA.js-server.git"
 	},
 	"keywords": [
-    "gulp",
-    "IMA.js",
-    "ima"
-  ],
+		"gulp",
+		"IMA.js",
+		"ima"
+	],
 	"author": "Seznam.cz, a.s.",
 	"license": "MIT",
 	"bugs": {
@@ -24,7 +26,14 @@
 		"registry": "http://registry.npmjs.org/"
 	},
 	"homepage": "https://github.com/seznam/IMA.js-server",
-	"devDependencies": {},
+	"devDependencies": {
+		"express": "^4.13.4",
+		"gulp": "^3.9.0",
+		"gulp-jasmine": "^2.2.1",
+		"gulp-plumber": "^1.0.1",
+		"jasmine": "^2.4.1",
+		"superagent": "^1.7.2"
+	},
 	"dependencies": {
 		"async-each": "^0.1.6",
 		"clone": "^1.0.2",
