--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima.js-gulp-tasks",
-	"version": "0.11.8",
+	"version": "0.12.1",
 	"description": "Default gulp tasks for IMA.js applications.",
 	"main": "",
 	"scripts": {
@@ -69,7 +69,7 @@
 		"karma": "^0.13.19",
 		"karma-jasmine": "^0.3.7",
 		"karma-phantomjs-launcher": "^1.0.0",
-		"phantomjs": "^2.1.3",
+		"phantomjs-prebuilt": "^2.1.3",
 		"run-sequence": "^1.1.5",
 		"vinyl-source-stream": "^1.1.0"
 	}
