--- a/packages/skeleton/.gitmodules
+++ b/packages/skeleton/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "imajs"]
-	path = imajs
-	url = https://github.com/seznam/IMA.js-core.git
-	url2 = git@github.com:seznam/IMA.js-core.git
+[submodule "ima"]
+	path = ima
+	url = git@github.com:seznam/IMA.js-core.git
