added browserify transformations

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -22,5 +22,10 @@
   "homepage": "https://github.com/seznam/IMA.js-helpers#readme",
   "dependencies": {
     "clone": "^1.0.2"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   }
 }
