#! remove app.server.js file from require cache

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "IMA.js-skeleton",
-	"version": "0.11.0",
+	"version": "0.12.0",
 	"description": "Isomorphic javascript application",
 	"main": "build/server.js",
 	"scripts": {
@@ -9,21 +9,21 @@
 		"start": "NODE_ENV=production node build/server.js"
 	},
 	"keywords": [
-		"IMA.js",
-		"Isomorphic",
-		"Javascript"
-	],
+    "IMA.js",
+    "Isomorphic",
+    "Javascript"
+  ],
 	"author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
 	"contributors": [
 		{
 			"name": "Martin Urban",
 			"email": "martin.urban@firma.seznam.cz"
-		},
+    },
 		{
 			"name": "Martin Jurča",
 			"email": "martin.jurca@firma.seznam.cz"
-		}
-	],
+    }
+  ],
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/seznam/IMA.js-skeleton.git"
@@ -35,7 +35,7 @@
 	"devDependencies": {
 		"ima.js-examples": "git+http://github.com/seznam/IMA.js-examples.git#0.11.0",
 		"ima.js-gulp-task-loader": "^0.11.0",
-		"ima.js-gulp-tasks": "git+http://github.com/seznam/IMA.js-gulp-tasks.git#0.12.4"
+		"ima.js-gulp-tasks": "git+http://github.com/seznam/IMA.js-gulp-tasks.git#0.12.5"
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.5.0",
@@ -45,14 +45,11 @@
 		"custom-event-polyfill": "^0.2.2",
 		"express": "^4.13.4",
 		"helmet": "^1.1.0",
-		"ima-helpers": "git+http://github.com/seznam/IMA.js-helpers.git#0.12.1",
+		"ima": "git+https://github.com/seznam/IMA.js-core.git#next",
 		"ima.js-babel6-polyfill": "^0.1.1",
-		"ima.js-server": "git+http://github.com/seznam/IMA.js-server.git#0.12.0",
+		"ima.js-server": "git+http://github.com/seznam/IMA.js-server.git#0.12.2",
 		"method-override": "^2.3.5",
 		"multer": "^1.0.6",
-		"react": "^0.14.7",
-		"react-dom": "^0.14.7",
-		"serve-favicon": "^2.3.0",
-		"superagent": "^1.7.2"
+		"serve-favicon": "^2.3.0"
 	}
 }
