simplified the steps for running the application in the production environment

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -7,6 +7,7 @@
     "app:hello": "node node_modules/gulp/bin/gulp.js app:hello",
     "test": "node node_modules/gulp/bin/gulp.js test",
     "dev": "node node_modules/gulp/bin/gulp.js dev",
+    "build": "NODE_ENV=production node_modules/gulp/bin/gulp.js build",
     "start": "NODE_ENV=production node build/server.js"
   },
   "keywords": [
