#! update package name

--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ima.js-gulp-tasks",
+	"name": "ima-gulp-tasks",
 	"version": "0.12.13",
 	"description": "Default gulp tasks for IMA.js applications.",
 	"main": "",
