--- a/packages/gulp-task-loader/package.json
+++ b/packages/gulp-task-loader/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "ima.js-gulp-task-loader",
-	"version": "0.11.0",
+	"name": "ima-gulp-task-loader",
+	"version": "0.12.0",
 	"description": "Automatic gulp task loader for IMA.js applications.",
 	"main": "taskLoader.js",
 	"scripts": {
@@ -16,7 +16,7 @@
 	"keywords": [
     "gulp",
     "ima.js",
-    "ima",
+    "IMA",
     "taskloader"
   ],
 	"author": "Seznam.cz, a.s.",
