--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -1,57 +1,53 @@
 {
-  "name": "IMA.js-skeleton",
-  "version": "0.12.0",
-  "description": "Isomorphic javascript application",
-  "main": "build/server.js",
-  "scripts": {
-    "app:hello": "node node_modules/gulp/bin/gulp.js app:hello",
-    "test": "node node_modules/gulp/bin/gulp.js test",
-    "dev": "node node_modules/gulp/bin/gulp.js dev",
-    "build": "NODE_ENV=production node_modules/gulp/bin/gulp.js build",
-    "start": "NODE_ENV=production node build/server.js"
-  },
-  "keywords": [
+	"name": "IMA.js-skeleton",
+	"version": "0.12.0",
+	"description": "Isomorphic javascript application",
+	"main": "build/server.js",
+	"scripts": {
+		"app:hello": "node node_modules/gulp/bin/gulp.js app:hello",
+		"test": "node node_modules/gulp/bin/gulp.js test",
+		"dev": "node node_modules/gulp/bin/gulp.js dev",
+		"build": "NODE_ENV=production node_modules/gulp/bin/gulp.js build",
+		"start": "NODE_ENV=production node build/server.js"
+	},
+	"keywords": [
     "IMA.js",
     "Isomorphic",
     "Javascript"
   ],
-  "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "contributors": [
-    {
-      "name": "Martin Urban",
-      "email": "martin.urban@firma.seznam.cz"
+	"author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
+	"contributors": [
+		{
+			"name": "Martin Urban",
+			"email": "martin.urban@firma.seznam.cz"
     },
-    {
-      "name": "Martin Jurča",
-      "email": "martin.jurca@firma.seznam.cz"
+		{
+			"name": "Martin Jurča",
+			"email": "martin.jurca@firma.seznam.cz"
     }
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/seznam/IMA.js-skeleton.git"
-  },
-  "bugs": {
-    "url": "https://github.com/seznam/IMA.js-skeleton/issues"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "ima.js-examples": "git+http://github.com/seznam/IMA.js-examples.git#0.12.1",
-    "ima.js-gulp-task-loader": "^0.11.0",
-    "ima.js-gulp-tasks": "git+http://github.com/seznam/IMA.js-gulp-tasks.git#0.12.12"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.5.0",
-    "body-parser": "^1.15.0",
-    "compression": "^1.6.1",
-    "cookie-parser": "^1.4.1",
-    "custom-event-polyfill": "^0.2.2",
-    "express": "^4.13.4",
-    "helmet": "^1.1.0",
-    "ima": "git+https://github.com/seznam/IMA.js-core.git#next",
-    "ima.js-babel6-polyfill": "^0.1.1",
-    "ima.js-server": "git+http://github.com/seznam/IMA.js-server.git#0.12.4",
-    "method-override": "^2.3.5",
-    "multer": "^1.0.6",
-    "serve-favicon": "^2.3.0"
-  }
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/seznam/IMA.js-skeleton.git"
+	},
+	"bugs": {
+		"url": "https://github.com/seznam/IMA.js-skeleton/issues"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"ima-gulp-task-loader": "^0.12.0",
+		"ima-gulp-tasks": "^0.12.15"
+	},
+	"dependencies": {
+		"body-parser": "^1.15.0",
+		"compression": "^1.6.1",
+		"cookie-parser": "^1.4.1",
+		"express": "^4.13.4",
+		"helmet": "^1.1.0",
+		"ima": "^0.12.1",
+		"ima-server": "^0.12.4",
+		"method-override": "^2.3.5",
+		"multer": "^1.0.6",
+		"serve-favicon": "^2.3.0"
+	}
 }
