--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -11,10 +11,10 @@
 		"url": "https://github.com/seznam/IMA.js-gulp-tasks.git"
 	},
 	"keywords": [
-		"gulp",
-		"IMA.js",
-		"ima"
-	],
+    "gulp",
+    "IMA.js",
+    "ima"
+  ],
 	"author": "Seznam.cz, a.s.",
 	"license": "MIT",
 	"bugs": {
@@ -26,19 +26,19 @@
 	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
 	"devDependencies": {},
 	"dependencies": {
-		"babel-core": "^6.6.4",
+		"babel-core": "^6.7.2",
 		"babel-plugin-external-helpers-2": "^6.3.13",
-		"babel-plugin-transform-es2015-modules-systemjs": "^6.6.4",
+		"babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
 		"babel-plugin-transform-react-constant-elements": "^6.5.0",
-		"babel-plugin-transform-react-inline-elements": "^6.6.4",
+		"babel-plugin-transform-react-inline-elements": "^6.6.5",
 		"babel-preset-es2015": "^6.6.0",
 		"babel-preset-es2015-loose": "^7.0.0",
 		"babel-preset-react": "^6.5.0",
 		"babelify": "^7.2.0",
 		"browserify": "^13.0.0",
 		"del": "^2.1.0",
-		"eslint": "^2.2.0",
-		"eslint-plugin-react": "^4.1.0",
+		"eslint": "^2.4.0",
+		"eslint-plugin-react": "^4.2.2",
 		"event-stream": "^3.3.2",
 		"fb-flo": "^0.5.0",
 		"fibers": "^1.0.10",
@@ -51,6 +51,7 @@
 		"gulp-cssnano": "^2.1.1",
 		"gulp-eslint": "^2.0.0",
 		"gulp-if": "^2.0.0",
+		"gulp-ignore": "^2.0.1",
 		"gulp-insert": "^0.5.0",
 		"gulp-less": "^3.0.5",
 		"gulp-live-server": "0.0.29",
@@ -67,10 +68,10 @@
 		"ima-examples": "^0.12.0",
 		"jasmine": "^2.4.1",
 		"jasmine-core": "^2.4.1",
-		"karma": "^0.13.21",
+		"karma": "^0.13.22",
 		"karma-jasmine": "^0.3.7",
 		"karma-phantomjs-launcher": "^1.0.0",
-		"phantomjs-prebuilt": "^2.1.4",
+		"phantomjs-prebuilt": "^2.1.5",
 		"run-sequence": "^1.1.5",
 		"vinyl-source-stream": "^1.1.0"
 	}
