added howto for installing other available example applications

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -5,6 +5,8 @@
 	"main": "build/server.js",
 	"scripts": {
 		"app:hello": "node node_modules/gulp/bin/gulp.js app:hello",
+		"app:feed": "node node_modules/gulp/bin/gulp.js app:feed",
+		"app:todos": "node node_modules/gulp/bin/gulp.js app:todos",
 		"test": "node node_modules/gulp/bin/gulp.js test",
 		"dev": "node node_modules/gulp/bin/gulp.js dev",
 		"build": "NODE_ENV=production node_modules/gulp/bin/gulp.js build",
