--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -62,6 +62,7 @@
 		"gulp-save": "^1.2.1",
 		"gulp-sourcemaps": "^1.6.0",
 		"gulp-sweetjs": "^0.6.1",
+		"gulp-tap": "^0.1.3",
 		"gulp-uglify": "^2.0.0",
 		"gulp-util": "^3.0.7",
 		"gulp-watch": "^4.3.9",
