--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima-gulp-tasks",
-	"version": "0.13.2",
+	"version": "0.14.0-rc.1",
 	"description": "Default gulp tasks for IMA.js applications.",
 	"main": "",
 	"scripts": {
