--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -26,22 +26,22 @@
 	"homepage": "https://github.com/seznam/IMA.js-gulp-tasks",
 	"devDependencies": {},
 	"dependencies": {
-		"babel-core": "^6.14.0",
+		"babel-core": "^6.17.0",
 		"babel-plugin-external-helpers-2": "^6.3.13",
 		"babel-plugin-transform-es2015-modules-systemjs": "^6.14.0",
 		"babel-plugin-transform-react-constant-elements": "^6.9.1",
 		"babel-plugin-transform-react-inline-elements": "^6.8.0",
-		"babel-preset-es2015": "^6.14.0",
+		"babel-preset-es2015": "^6.16.0",
 		"babel-preset-es2015-loose": "^8.0.0",
-		"babel-preset-react": "^6.11.1",
+		"babel-preset-react": "^6.16.0",
 		"babelify": "^7.3.0",
 		"browserify": "^13.1.0",
 		"del": "^2.2.2",
-		"eslint": "^3.5.0",
-		"eslint-plugin-react": "^6.2.0",
+		"eslint": "^3.7.1",
+		"eslint-plugin-react": "^6.4.1",
 		"event-stream": "^3.3.4",
 		"fb-flo": "^0.5.0",
-		"fibers": "^1.0.14",
+		"fibers": "^1.0.15",
 		"gulp": "^3.9.1",
 		"gulp-autoprefixer": "^3.1.1",
 		"gulp-babel": "^6.1.2",
@@ -60,21 +60,21 @@
 		"gulp-remember": "^0.3.1",
 		"gulp-rename": "^1.2.2",
 		"gulp-save": "^1.2.1",
-		"gulp-sourcemaps": "^1.6.0",
+		"gulp-sourcemaps": "1.6.0",
 		"gulp-sweetjs": "^0.6.1",
 		"gulp-tap": "^0.1.3",
 		"gulp-uglify": "^2.0.0",
 		"gulp-util": "^3.0.7",
-		"gulp-watch": "^4.3.9",
+		"gulp-watch": "^4.3.10",
 		"gulp-yuidoc": "^0.1.2",
 		"ima-examples": "^0.13.0",
-		"jasmine": "^2.5.1",
-		"jasmine-core": "^2.5.1",
+		"jasmine": "^2.5.2",
+		"jasmine-core": "^2.5.2",
 		"karma": "^1.3.0",
 		"karma-babel-preprocessor": "^6.0.1",
 		"karma-jasmine": "^1.0.2",
 		"karma-phantomjs-launcher": "^1.0.2",
-		"phantomjs-prebuilt": "^2.1.12",
+		"phantomjs-prebuilt": "^2.1.13",
 		"run-sequence": "^1.2.2",
 		"vinyl-source-stream": "^1.1.0"
 	}
