--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -31,8 +31,7 @@
 		"babel-plugin-transform-es2015-modules-systemjs": "^6.14.0",
 		"babel-plugin-transform-react-constant-elements": "^6.9.1",
 		"babel-plugin-transform-react-inline-elements": "^6.8.0",
-		"babel-preset-es2015": "^6.16.0",
-		"babel-preset-es2015-loose": "^8.0.0",
+		"babel-preset-latest": "^6.16.0",
 		"babel-preset-react": "^6.16.0",
 		"babelify": "^7.3.0",
 		"browserify": "^13.1.0",
@@ -50,7 +49,6 @@
 		"gulp-concat": "^2.6.0",
 		"gulp-cssnano": "^2.1.2",
 		"gulp-eslint": "^3.0.1",
-		"gulp-if": "^2.0.1",
 		"gulp-ignore": "^2.0.1",
 		"gulp-insert": "^0.5.0",
 		"gulp-less": "^3.1.0",
@@ -61,7 +59,6 @@
 		"gulp-rename": "^1.2.2",
 		"gulp-save": "^1.2.1",
 		"gulp-sourcemaps": "1.6.0",
-		"gulp-sweetjs": "^0.6.1",
 		"gulp-tap": "^0.1.3",
 		"gulp-uglify": "^2.0.0",
 		"gulp-util": "^3.0.7",
