--- a/packages/skeleton/.babelrc
+++ b/packages/skeleton/.babelrc
@@ -1,4 +1,4 @@
 {
-	"presets": [ "es2015", "react" ],
+	"presets": [ "es2017", "es2016", ["es2015", { "loose": true }], "react" ],
 	"plugins": [ "transform-es2015-modules-commonjs", "external-helpers-2" ]
 }
