fixed the keywords

--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -16,7 +16,7 @@
 	"keywords": [
 		"IMA.js",
 		"Isomorphic",
-		"Javascript"
+		"JavaScript"
  	],
 	"author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
 	"contributors": [
