switch from yuidoc to jsdoc3

--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -51,6 +51,7 @@
 		"gulp-eslint": "^3.0.1",
 		"gulp-ignore": "^2.0.1",
 		"gulp-insert": "^0.5.0",
+		"gulp-jsdoc3": "^1.0.0",
 		"gulp-less": "^3.1.0",
 		"gulp-live-server": "0.0.30",
 		"gulp-messageformat": "0.0.10",
@@ -63,7 +64,6 @@
 		"gulp-uglify": "^2.0.0",
 		"gulp-util": "^3.0.7",
 		"gulp-watch": "^4.3.10",
-		"gulp-yuidoc": "^0.1.2",
 		"ima-examples": "^0.13.0",
 		"jasmine": "^2.5.2",
 		"jasmine-core": "^2.5.2",
