--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -36,6 +36,7 @@
 		"babelify": "^7.3.0",
 		"browserify": "^13.1.0",
 		"del": "^2.2.2",
+		"docdash": "^0.4.0",
 		"eslint": "^3.7.1",
 		"eslint-plugin-react": "^6.4.1",
 		"event-stream": "^3.3.4",
