--- a/packages/skeleton/package.json
+++ b/packages/skeleton/package.json
@@ -47,7 +47,7 @@
 		"cookie-parser": "1.4.3",
 		"express": "4.14.0",
 		"helmet": "^2.1.1",
-		"ima": "^0.14.0-rc.8",
+		"ima": "0.14.0-rc.10",
 		"ima-server": "0.14.0-rc.3",
 		"method-override": "2.3.6",
 		"multer": "^1.0.6",
