--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ima-helpers",
-	"version": "0.13.0",
+	"version": "0.14.0-rc.1",
 	"description": "Various helpers for the IMA.js framework.",
 	"main": "index.js",
 	"scripts": {
