switch to ES2015, updated the dependencies

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -24,7 +24,11 @@
 		"registry": "http://registry.npmjs.org/"
 	},
 	"dependencies": {
-		"clone": "^1.0.2"
+		"clone": "^2.1.0"
+	},
+	"engines": {
+		"node": ">=6",
+		"npm": ">=4 <6"
 	},
 	"browserify": {
 		"transform": [
