made the tests mandatory for publishing the package

--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -4,6 +4,7 @@
 	"description": "Various helpers for the IMA.js framework.",
 	"main": "index.js",
 	"scripts": {
+		"prepublishOnly": "npm test",
 		"test": "node_modules/gulp/bin/gulp.js test"
 	},
 	"repository": {
